--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -34,3 +34,17 @@ body {
 	border-radius: 0;
 	box-shadow: 0px 1px 3px #2a2a2a;
 }
+
+.navbar-inverse .navbar-brand {
+	
+	color: #6ff573;
+	font-family: 'dancing_script_otregular', sans-serif;
+	font-size: 26px;
+	
+
+}
+
+
+
+
+
